# ProjetoIntegrador4B

./: API.md  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/controller/: clients.py
app/model/: clients.py
app/repository/: clients.json
app/router/: __init__.py  clients.py  home.py
